<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_menu_calculator"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_popup_sync"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_audioPlayer"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_audioPlayer" />
        <item
            android:id="@+id/nav_audioRecorder"
            android:icon="@android:drawable/ic_btn_speak_now"
            android:title="@string/menu_audioRecorder" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_map" />
    </group>
</menu>