<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ru.mirea.kalugina.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_camera"
        android:name="com.ru.mirea.kalugina.mireaproject.ui.camera.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.ru.mirea.kalugina.mireaproject.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_browser"
        android:name="com.ru.mirea.kalugina.mireaproject.ui.browser.BrowserFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_browser" />
    <fragment
        android:id="@+id/nav_calculator"
        android:name="com.ru.mirea.kalugina.mireaproject.ui.calculator.CalculatorFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculator" />
    <fragment
        android:id="@+id/nav_audioPlayer"
        android:name="com.ru.mirea.kalugina.mireaproject.ui.audioPlayer.AudioPlayerFragment"
        android:label="@string/menu_audioPlayer"
        tools:layout="@layout/fragment_audio_player" />
    <fragment
        android:id="@+id/nav_audioRecorder"
        android:name="com.ru.mirea.kalugina.mireaproject.ui.audioRecorder.AudioRecorderFragment"
        android:label="@string/menu_audioRecorder"
        tools:layout="@layout/fragment_audio_recorder" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.ru.mirea.kalugina.mireaproject.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_map"
        android:name="com.ru.mirea.kalugina.mireaproject.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />
</navigation>